--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,22 +11,18 @@ jobs:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     
-    permissions:
-      contents: 'read'
-      id-token: 'write'
-    
     steps:
     - uses: actions/checkout@v3
     
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
     
-    - id: 'auth'
-      name: 'Authenticate to Google Cloud'
-      uses: 'google-github-actions/auth@v1'
-      with:
-        workload_identity_provider: 'projects/179131920588/locations/global/workloadIdentityPools/github-actions-pool/providers/github-provider'
-        service_account: 'ganglia-uploader@halloween2023.iam.gserviceaccount.com'
+    - name: Set up Google Application Credentials
+      run: |
+        echo "${{ secrets.GCP_SA_KEY_BASE64 }}" | base64 -d > /tmp/gcp-credentials.json
+        chmod 600 /tmp/gcp-credentials.json
+      env:
+        GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-credentials.json
 
     - name: Make run_tests.sh executable
       run: chmod +x run_tests.sh
@@ -37,16 +33,17 @@ jobs:
         GCP_BUCKET_NAME: ${{ secrets.GCP_BUCKET_NAME }}
         GCP_PROJECT_NAME: ${{ secrets.GCP_PROJECT_NAME }}
         SUNO_API_KEY: ${{ secrets.SUNO_API_KEY }}
+        GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-credentials.json
       run: ./run_tests.sh docker unit
+    
+    - name: Clean up
+      if: always()
+      run: rm -f /tmp/gcp-credentials.json
 
   smoke-tests:
     needs: unit-tests
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
-    
-    permissions:
-      contents: 'read'
-      id-token: 'write'
     
     steps:
     - uses: actions/checkout@v3
@@ -54,12 +51,12 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
     
-    - id: 'auth'
-      name: 'Authenticate to Google Cloud'
-      uses: 'google-github-actions/auth@v1'
-      with:
-        workload_identity_provider: 'projects/179131920588/locations/global/workloadIdentityPools/github-actions-pool/providers/github-provider'
-        service_account: 'ganglia-uploader@halloween2023.iam.gserviceaccount.com'
+    - name: Set up Google Application Credentials
+      run: |
+        echo "${{ secrets.GCP_SA_KEY_BASE64 }}" | base64 -d > /tmp/gcp-credentials.json
+        chmod 600 /tmp/gcp-credentials.json
+      env:
+        GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-credentials.json
 
     - name: Make run_tests.sh executable
       run: chmod +x run_tests.sh
@@ -70,15 +67,16 @@ jobs:
         GCP_BUCKET_NAME: ${{ secrets.GCP_BUCKET_NAME }}
         GCP_PROJECT_NAME: ${{ secrets.GCP_PROJECT_NAME }}
         SUNO_API_KEY: ${{ secrets.SUNO_API_KEY }}
+        GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-credentials.json
       run: ./run_tests.sh docker smoke
+    
+    - name: Clean up
+      if: always()
+      run: rm -f /tmp/gcp-credentials.json
 
   integration-tests:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
-    
-    permissions:
-      contents: 'read'
-      id-token: 'write'
     
     steps:
     - uses: actions/checkout@v3
@@ -86,12 +84,12 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
     
-    - id: 'auth'
-      name: 'Authenticate to Google Cloud'
-      uses: 'google-github-actions/auth@v1'
-      with:
-        workload_identity_provider: 'projects/179131920588/locations/global/workloadIdentityPools/github-actions-pool/providers/github-provider'
-        service_account: 'ganglia-uploader@halloween2023.iam.gserviceaccount.com'
+    - name: Set up Google Application Credentials
+      run: |
+        echo "${{ secrets.GCP_SA_KEY_BASE64 }}" | base64 -d > /tmp/gcp-credentials.json
+        chmod 600 /tmp/gcp-credentials.json
+      env:
+        GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-credentials.json
 
     - name: Make run_tests.sh executable
       run: chmod +x run_tests.sh
@@ -102,5 +100,10 @@ jobs:
         GCP_BUCKET_NAME: ${{ secrets.GCP_BUCKET_NAME }}
         GCP_PROJECT_NAME: ${{ secrets.GCP_PROJECT_NAME }}
         SUNO_API_KEY: ${{ secrets.SUNO_API_KEY }}
+        GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-credentials.json
       run: ./run_tests.sh docker integration
+    
+    - name: Clean up
+      if: always()
+      run: rm -f /tmp/gcp-credentials.json
 
