--- a/requirements_core.txt
+++ b/requirements_core.txt
@@ -26,6 +26,7 @@ pydub>=0.25.1
 # Image and Media Handling
 pillow>=10.0.0
 python-magic>=0.4.27
+opencv-python>=4.9.0.80
 
 # Development dependencies
-pylint==3.0.3  # For code linting
+pylint>=3.0.3  # For code linting and style checking
