Refactor and modularize utility functions
- Split utils.py into multiple specialized modules:
  - file_utils.py: File and directory management
  - ffmpeg_utils.py: FFmpeg command and thread management
  - cloud_utils.py: Google Cloud Storage operations
  - retry_utils.py: Retry and backoff logic
  - video_utils.py: Video generation utilities
- Add __init__.py to utils package for centralized imports
- Update imports across project to use new modular structure
- Add new utility functions for video generation and testing
- Improve code organization and maintainability

--- a/.pylintrc
+++ b/.pylintrc
@@ -6,7 +6,7 @@ ignore=CVS
 disable=
 
 # Files or directories to be skipped. They should be base names, not paths
-ignore-patterns=
+ignore-patterns=ganglia_minified/*
 
 [FORMAT]
 # Maximum number of characters on a single line
@@ -34,7 +34,7 @@ good-names=i,j,k,ex,Run,_,id,f
 known-standard-library=
 
 # Force import order to recognize a module as part of a third party library
-known-third-party=numpy,torch,soundfile,transformers,requests,openai
+known-third-party=numpy,torch,soundfile,transformers,requests,openai,opencv-python,cv2
 
 [MESSAGES CONTROL]
 # Only show warnings with the listed confidence levels
