--- a/.pylintrc
+++ b/.pylintrc
@@ -8,6 +8,12 @@ disable=
 # Files or directories to be skipped. They should be base names, not paths
 ignore-patterns=ganglia_minified/*
 
+# Extension packages to allow
+extension-pkg-allow-list=numpy,cv2
+
+# List of members which are set dynamically and missed by pylint inference system
+generated-members=cv2.*
+
 [FORMAT]
 # Maximum number of characters on a single line
 max-line-length=100
