Update test infrastructure with YouTube credentials and pipeline test improvements
- Add separate handling for YouTube credentials and token in run_tests.sh
- Update GitHub Actions workflow to support YouTube credentials file
- Modify smoke test pipeline to use timestamped TTV directory retrieval
- Enhance credential and token management across test scripts
- Improve test execution flexibility and robustness

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,6 +26,13 @@ jobs:
 
     - name: Set up YouTube credentials
       run: |
+        echo "${{ secrets.YOUTUBE_CREDENTIALS_BASE64 }}" | base64 -d > /tmp/youtube_credentials.json
+        chmod 600 /tmp/youtube_credentials.json
+      env:
+        YOUTUBE_CREDENTIALS_FILE: /tmp/youtube_credentials.json
+
+    - name: Set up YouTube token
+      run: |
         echo "${{ secrets.YOUTUBE_TOKEN_BASE64 }}" | base64 -d > /tmp/youtube_token.json
         chmod 600 /tmp/youtube_token.json
       env:
@@ -72,6 +79,13 @@ jobs:
 
     - name: Set up YouTube credentials
       run: |
+        echo "${{ secrets.YOUTUBE_CREDENTIALS_BASE64 }}" | base64 -d > /tmp/youtube_credentials.json
+        chmod 600 /tmp/youtube_credentials.json
+      env:
+        YOUTUBE_CREDENTIALS_FILE: /tmp/youtube_credentials.json
+
+    - name: Set up YouTube token
+      run: |
         echo "${{ secrets.YOUTUBE_TOKEN_BASE64 }}" | base64 -d > /tmp/youtube_token.json
         chmod 600 /tmp/youtube_token.json
       env:
@@ -116,6 +130,13 @@ jobs:
         GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-credentials.json
 
     - name: Set up YouTube credentials
+      run: |
+        echo "${{ secrets.YOUTUBE_CREDENTIALS_BASE64 }}" | base64 -d > /tmp/youtube_credentials.json
+        chmod 600 /tmp/youtube_credentials.json
+      env:
+        YOUTUBE_CREDENTIALS_FILE: /tmp/youtube_credentials.json
+
+    - name: Set up YouTube token
       run: |
         echo "${{ secrets.YOUTUBE_TOKEN_BASE64 }}" | base64 -d > /tmp/youtube_token.json
         chmod 600 /tmp/youtube_token.json
