Add JSON validation for YouTube token in GitHub Actions workflows
- Enhance token setup steps in tests.yml with JSON validation
- Add error handling to detect and prevent processing of invalid token files
- Use jq to verify JSON format before setting file permissions
- Maintain consistent approach to token file validation across different job configurations

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,7 +33,12 @@ jobs:
 
     - name: Set up YouTube token
       run: |
+        # Decode and validate token
         echo "${{ secrets.YOUTUBE_TOKEN_BASE64 }}" | base64 -d > /tmp/youtube_token.json
+        if ! jq empty /tmp/youtube_token.json 2>/dev/null; then
+          echo "Error: Invalid JSON in decoded token file"
+          exit 1
+        fi
         chmod 600 /tmp/youtube_token.json
       env:
         YOUTUBE_TOKEN_FILE: /tmp/youtube_token.json
@@ -87,6 +92,8 @@ jobs:
     - name: Set up YouTube token
       run: |
         echo "${{ secrets.YOUTUBE_TOKEN_BASE64 }}" | base64 -d > /tmp/youtube_token.json
+        # Verify JSON format
+        jq empty /tmp/youtube_token.json || (echo "Invalid JSON in token file" && exit 1)
         chmod 600 /tmp/youtube_token.json
       env:
         YOUTUBE_TOKEN_FILE: /tmp/youtube_token.json
@@ -139,6 +146,8 @@ jobs:
     - name: Set up YouTube token
       run: |
         echo "${{ secrets.YOUTUBE_TOKEN_BASE64 }}" | base64 -d > /tmp/youtube_token.json
+        # Verify JSON format
+        jq empty /tmp/youtube_token.json || (echo "Invalid JSON in token file" && exit 1)
         chmod 600 /tmp/youtube_token.json
       env:
         YOUTUBE_TOKEN_FILE: /tmp/youtube_token.json
