--- a/pytest.ini
+++ b/pytest.ini
@@ -11,6 +11,7 @@ markers =
     integration: mark test as an integration test
     costly: mark test as computationally expensive or time-consuming
     smoke: mark test as a smoke test (key functionality with mocks)
+    live: mark test as a live test (requires external services)
 
 # Default test selection (can be overridden via command line)
 addopts = -v -s --strict-markers
