--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,15 @@
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
+    "files.eol": "\n",
+    "files.insertFinalNewline": true,
+    "files.trimTrailingWhitespace": true,
+    "files.trimFinalNewlines": true,
+    "[python]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "ms-python.python",
+        "editor.rulers": [100],
+        "editor.insertSpaces": true,
+        "editor.tabSize": 4
+    }
 }
