--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,7 +51,7 @@ jobs:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         GCP_BUCKET_NAME: ${{ secrets.GCP_BUCKET_NAME }}
         GCP_PROJECT_NAME: ${{ secrets.GCP_PROJECT_NAME }}
-        SUNO_API_KEY: ${{ secrets.SUNO_API_KEY }}
+        FOXAI_SUNO_API_KEY: ${{ secrets.FOXAI_SUNO_API_KEY }}
         SUNO_API_URL: ${{ secrets.SUNO_API_URL }}
         GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-credentials.json
         YOUTUBE_TOKEN_FILE: /tmp/youtube_token.json
@@ -107,7 +107,7 @@ jobs:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         GCP_BUCKET_NAME: ${{ secrets.GCP_BUCKET_NAME }}
         GCP_PROJECT_NAME: ${{ secrets.GCP_PROJECT_NAME }}
-        SUNO_API_KEY: ${{ secrets.SUNO_API_KEY }}
+        FOXAI_SUNO_API_KEY: ${{ secrets.FOXAI_SUNO_API_KEY }}
         SUNO_API_URL: ${{ secrets.SUNO_API_URL }}
         GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-credentials.json
         YOUTUBE_TOKEN_FILE: /tmp/youtube_token.json
@@ -162,7 +162,7 @@ jobs:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         GCP_BUCKET_NAME: ${{ secrets.GCP_BUCKET_NAME }}
         GCP_PROJECT_NAME: ${{ secrets.GCP_PROJECT_NAME }}
-        SUNO_API_KEY: ${{ secrets.SUNO_API_KEY }}
+        FOXAI_SUNO_API_KEY: ${{ secrets.FOXAI_SUNO_API_KEY }}
         SUNO_API_URL: ${{ secrets.SUNO_API_URL }}
         GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-credentials.json
         YOUTUBE_CREDENTIALS_FILE: /tmp/youtube_credentials.json
