--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,6 +17,16 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    - name: Get GANGLIA temp directory
+      run: |
+        echo "GANGLIA_TEMP_DIR=$(python3 -c "import sys; sys.path.append('$PWD'); from utils.file_utils import get_tempdir; print(get_tempdir())")" >> $GITHUB_ENV
+        mkdir -p $GANGLIA_TEMP_DIR/logs
+
     - name: Set up Google Application Credentials
       run: |
         echo "${{ secrets.GCP_SA_KEY_BASE64 }}" | base64 -d > /tmp/gcp-credentials.json
@@ -57,7 +67,30 @@ jobs:
         YOUTUBE_TOKEN_FILE: /tmp/youtube_token.json
         UPLOAD_SMOKE_TESTS_TO_YOUTUBE: 'false'
         UPLOAD_INTEGRATION_TESTS_TO_YOUTUBE: 'false'
+        GANGLIA_TEMP_DIR: ${{ env.GANGLIA_TEMP_DIR }}
       run: ./run_tests.sh docker unit
+
+    - name: Display Test Links
+      if: always()
+      run: |
+        echo "Checking test logs for GCP and YouTube links..."
+        # Find the most recent log file
+        LOG_FILE=$(ls -t $GANGLIA_TEMP_DIR/logs/test_run_docker_unit_*.log | head -n 1)
+        if [ -f "$LOG_FILE" ]; then
+          echo "Using log file: $LOG_FILE"
+          # Extract GCP link
+          GCP_LINK=$(grep -o "gs://[^ ]*" "$LOG_FILE" || true)
+          if [ ! -z "$GCP_LINK" ]; then
+            echo "GCP Link: $GCP_LINK"
+          fi
+          # Extract YouTube link
+          YOUTUBE_LINK=$(grep -o "https://www.youtube.com/watch?v=[^ ]*" "$LOG_FILE" || true)
+          if [ ! -z "$YOUTUBE_LINK" ]; then
+            echo "YouTube Link: $YOUTUBE_LINK"
+          fi
+        else
+          echo "No log file found"
+        fi
 
     - name: Clean up
       if: always()
@@ -75,6 +108,16 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    - name: Get GANGLIA temp directory
+      run: |
+        echo "GANGLIA_TEMP_DIR=$(python3 -c "import sys; sys.path.append('$PWD'); from utils.file_utils import get_tempdir; print(get_tempdir())")" >> $GITHUB_ENV
+        mkdir -p $GANGLIA_TEMP_DIR/logs
 
     - name: Set up Google Application Credentials
       run: |
@@ -113,7 +156,30 @@ jobs:
         YOUTUBE_TOKEN_FILE: /tmp/youtube_token.json
         UPLOAD_SMOKE_TESTS_TO_YOUTUBE: 'true'
         UPLOAD_INTEGRATION_TESTS_TO_YOUTUBE: 'false'
+        GANGLIA_TEMP_DIR: ${{ env.GANGLIA_TEMP_DIR }}
       run: ./run_tests.sh docker smoke
+
+    - name: Display Test Links
+      if: always()
+      run: |
+        echo "Checking test logs for GCP and YouTube links..."
+        # Find the most recent log file
+        LOG_FILE=$(ls -t $GANGLIA_TEMP_DIR/logs/test_run_docker_smoke_*.log | head -n 1)
+        if [ -f "$LOG_FILE" ]; then
+          echo "Using log file: $LOG_FILE"
+          # Extract GCP link
+          GCP_LINK=$(grep -o "gs://[^ ]*" "$LOG_FILE" || true)
+          if [ ! -z "$GCP_LINK" ]; then
+            echo "GCP Link: $GCP_LINK"
+          fi
+          # Extract YouTube link
+          YOUTUBE_LINK=$(grep -o "https://www.youtube.com/watch?v=[^ ]*" "$LOG_FILE" || true)
+          if [ ! -z "$YOUTUBE_LINK" ]; then
+            echo "YouTube Link: $YOUTUBE_LINK"
+          fi
+        else
+          echo "No log file found"
+        fi
 
     - name: Clean up
       if: always()
@@ -130,6 +196,16 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    - name: Get GANGLIA temp directory
+      run: |
+        echo "GANGLIA_TEMP_DIR=$(python3 -c "import sys; sys.path.append('$PWD'); from utils.file_utils import get_tempdir; print(get_tempdir())")" >> $GITHUB_ENV
+        mkdir -p $GANGLIA_TEMP_DIR/logs
 
     - name: Set up Google Application Credentials
       run: |
@@ -169,7 +245,30 @@ jobs:
         YOUTUBE_TOKEN_FILE: /tmp/youtube_token.json
         UPLOAD_SMOKE_TESTS_TO_YOUTUBE: 'false'
         UPLOAD_INTEGRATION_TESTS_TO_YOUTUBE: 'true'
+        GANGLIA_TEMP_DIR: ${{ env.GANGLIA_TEMP_DIR }}
       run: ./run_tests.sh docker integration
+
+    - name: Display Test Links
+      if: always()
+      run: |
+        echo "Checking test logs for GCP and YouTube links..."
+        # Find the most recent log file
+        LOG_FILE=$(ls -t $GANGLIA_TEMP_DIR/logs/test_run_docker_integration_*.log | head -n 1)
+        if [ -f "$LOG_FILE" ]; then
+          echo "Using log file: $LOG_FILE"
+          # Extract GCP link
+          GCP_LINK=$(grep -o "gs://[^ ]*" "$LOG_FILE" || true)
+          if [ ! -z "$GCP_LINK" ]; then
+            echo "GCP Link: $GCP_LINK"
+          fi
+          # Extract YouTube link
+          YOUTUBE_LINK=$(grep -o "https://www.youtube.com/watch?v=[^ ]*" "$LOG_FILE" || true)
+          if [ ! -z "$YOUTUBE_LINK" ]; then
+            echo "YouTube Link: $YOUTUBE_LINK"
+          fi
+        else
+          echo "No log file found"
+        fi
 
     - name: Clean up
       if: always()
