Refactor music generation and configuration management for improved functionality
Note that this is partial WIP - just had too many files in flight and had to push what was easy to review even though we're not in a working state at the moment

- Update `.gitignore` to include new configuration files and directories
- Refactor `get_background_music_from_prompt` and `get_closing_credits_from_prompt` methods to ensure output directories are created if they do not exist
- Introduce `STATUS.md` for debugging instructions related to TTV hotword issues
- Enhance VSCode configuration files for better debugging experience
- Add task definitions in `tasks.json` for running TTV and chatbot processes
- Improve error handling and logging in music generation backends
- Implement unit tests for hotword detection and query dispatching
- Update existing tests to reflect changes in method signatures and functionality

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,6 @@ concat_list.txt
 coqui_config.json
 config/ganglia_config.json
 config/chatgpt_session_config.json
-config/hotwords.json
 config/ttv_config.json
 config_backups/*
 
@@ -39,3 +38,5 @@ ganglia_minified.py
 .ai_status.md
 .cursorrules
 .cursor/
+.cursor
+.env
