--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
         "editor.rulers": [100],
         "editor.insertSpaces": true,
         "editor.tabSize": 4
-    }
+    },
+    "terminal.integrated.inheritEnv": true
 }
