--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,12 @@ config/chatgpt_session_config.json
 config/ttv_config.json
 config_backups/*
 
+# Session scratch files
+AUDIO_PROCESS_HANGING_ANALYSIS.md
+COMMIT_MSG.txt
+prep_env.sh
+dictation/wake_word_dictation.py
+
 # Test outputs
 tests/unit/ttv/test_outputs/
 tests/third_party/ttv/test_outputs/
