--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@ COMMIT_MSG.txt
 prep_env.sh
 dictation/wake_word_dictation.py
 
+# Utility repositories
+cursor-rules/
+
 # Test outputs
 tests/unit/ttv/test_outputs/
 tests/third_party/ttv/test_outputs/
