config: reduce conversation timeout to 5 seconds
Changed conversation_timeout from 30s to 5s for faster return to idle mode.
This helps with outdoor environments where passing cars may trigger false
positives - the system will quickly return to VAD mode if no actual speech
is detected.

--- a/config/vad_config.json
+++ b/config/vad_config.json
@@ -20,8 +20,8 @@
     "silence_threshold": 2.5,
     "comment_silence_threshold": "Seconds of silence before marking user as 'done speaking' within a conversation. Default: 2.5",
 
-    "conversation_timeout": 30,
-    "comment_conversation_timeout": "Seconds of silence before returning to idle listening mode (stops Google API streaming). Default: 30"
+    "conversation_timeout": 5,
+    "comment_conversation_timeout": "Seconds of silence before returning to idle listening mode (stops Google API streaming). Default: 30. CURRENT: 5 (quick timeout for outdoor environment with passing cars)"
   },
 
   "audio": {
