chore: resolve merge conflict and add cursor symlink
- Add symbolic link to shared cursor configuration
- Clean up .gitignore by resolving merge conflict markers
- Consolidate duplicate .cursor entries in gitignore
- Maintain ignore rules for .cursor/, .cursorrules, and .env

This commit resolves a merge conflict in .gitignore that introduced duplicate entries and adds a symlink to centralize cursor configuration management.

--- a/.gitignore
+++ b/.gitignore
@@ -46,10 +46,6 @@ ganglia_minified.py
 # AI status
 .ai_status.md
 .cursorrules
-<<<<<<< Updated upstream
 .cursor/
-.cursor
+.cursorrules
 .env
-=======
-.cursor
->>>>>>> Stashed changes
