Add torch dependencies back to requirements_test.txt for test collection
- Pytest fails during test collection when modules import torch at top level
- ttv/audio_alignment.py imports torch/whisper for audio processing
- music_backends/meta.py imports torch for MusicGen backend
- These imports happen before any tests run, so we need the dependencies

Unfortunately, this means requirements_test.txt is nearly identical to
requirements_large.txt. Future optimization could use lazy imports or
conditional imports to reduce test dependencies, but that requires
code changes which we're avoiding for now.

For now, this should fix the CI build errors.

--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,5 +1,11 @@
-# Test Requirements - Lightweight version for CI/CD
-# Excludes heavy ML dependencies (torch, transformers, whisper) that aren't needed for tests
+# Test Requirements - Includes dependencies needed for test collection
+# Some modules import these at top-level, so they're required even for tests
+
+# ML Dependencies (needed for audio_alignment.py and music_backends/meta.py imports)
+torch>=2.0.0
+torchaudio>=2.0.0
+openai-whisper>=20231117
+transformers>=4.30.0
 
 # Video and Image Processing (needed for TTV tests)
 opencv-python>=4.9.0.80
