fix: address all PR feedback - code bugs, config management, docs cleanup
Addressed all PR #60 review comments systematically:

**Theme 1: CI/CD Safety (Clarification)**
- Added detailed explanatory comments to disk space cleanup steps
- Clarified this is standard GitHub Actions practice for Docker-heavy builds
- Prevents "No space left on device" errors during ML dependency installs

**Theme 2: Code Correctness & Bug Fixes**
- Fixed missing space in GoogleTTS initialization message (tts.py)
- Fixed median calculation for even-sized datasets (performance_profiler.py)
- Added None-check for TTS conversion failures (conversational_interface.py)
- Removed unreachable code in user_turn method (lines that could never execute)

**Theme 3: Configuration Management**
- Created vad_config.json.template pattern for user customization
- Added vad_config.json to .gitignore (users can override without dirty git)
- Added auto-copy logic in vad_dictation.py and start_ganglia_monitored.sh
- Fixed stale energy_threshold comment (150 vs claimed 300)
- Updated silence_threshold comment to reflect aggressive 0.75s setting
- Added warning that 0.75s may cut off mid-sentence (increase to 1.25-1.5s for normal use)

**Theme 4: Documentation Cleanup**
- Archived LLM_MODEL_OPTIONS.md → docs/archive/LLM_MODEL_OPTIONS_2025-10.md
- Archived PERFORMANCE_ANALYSIS.md → docs/archive/PERFORMANCE_ANALYSIS_2025-10.md
- Archived ROUNDTRIP_SPEED_SUMMARY.md → docs/archive/ROUNDTRIP_SPEED_SUMMARY_2025-10.md
- Removed AUDIO_OUTPUT_TEST.md (outdated debug doc)
- Removed OPENAI_TTS_QUICKSTART.md (no longer needed)
- Removed baseline_performance.txt from PR, added to .gitignore

**Theme 5: Technical Debt Documentation**
- Added comprehensive TODO comment to user_turn method
- Flagged need for refactoring into focused helper methods
- Documented that method has become "catchall basket" needing cleanup

All bot and human review comments now addressed.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,6 +33,11 @@ jobs:
           exit 1
         fi
 
+    # Standard GitHub Actions workaround: Remove pre-installed software we don't need
+    # GitHub Actions runners come with ~14GB of pre-installed tools (dotnet, android SDK, etc.)
+    # Docker builds for ML dependencies (torch, transformers) need ~10-12GB
+    # Without cleanup: "No space left on device" during pip install
+    # This is a common practice for Docker-heavy CI workflows
     - name: Free up disk space
       run: |
         echo "Disk space before cleanup:"
@@ -156,6 +161,11 @@ jobs:
           exit 1
         fi
 
+    # Standard GitHub Actions workaround: Remove pre-installed software we don't need
+    # GitHub Actions runners come with ~14GB of pre-installed tools (dotnet, android SDK, etc.)
+    # Docker builds for ML dependencies (torch, transformers) need ~10-12GB
+    # Without cleanup: "No space left on device" during pip install
+    # This is a common practice for Docker-heavy CI workflows
     - name: Free up disk space
       run: |
         echo "Disk space before cleanup:"
@@ -278,6 +288,11 @@ jobs:
           exit 1
         fi
 
+    # Standard GitHub Actions workaround: Remove pre-installed software we don't need
+    # GitHub Actions runners come with ~14GB of pre-installed tools (dotnet, android SDK, etc.)
+    # Docker builds for ML dependencies (torch, transformers) need ~10-12GB
+    # Without cleanup: "No space left on device" during pip install
+    # This is a common practice for Docker-heavy CI workflows
     - name: Free up disk space
       run: |
         echo "Disk space before cleanup:"
