--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ coqui_config.json
 config/ganglia_config.json
 config/chatgpt_session_config.json
 config/ttv_config.json
+config/vad_config.json
 config_backups/*
 
 # Session scratch files
@@ -29,6 +30,7 @@ AUDIO_PROCESS_HANGING_ANALYSIS.md
 COMMIT_MSG.txt
 prep_env.sh
 dictation/wake_word_dictation.py
+baseline_performance.txt
 
 # Utility repositories
 cursor-rules/
@@ -49,3 +51,4 @@ ganglia_minified.py
 .cursor/
 .cursorrules
 .env
+.cursor
